Select dataset and provided context on feature values

--- a/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
+++ b/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
@@ -14,6 +14,40 @@
     "**Project Overview** <br>\n",
     "Implement and understand the application of a number of outlier/anomaly detection algorithms\n",
     "\n",
+    "**Project Aim** <br>\n",
+    "- The purpose of this project is to solve a classification problem in relation to anomaly detection\n",
+    "- The objective of the network optimization team is to analyze traces of past activity, which will be used to train an ML system capable of classifying samples of current activity as:\n",
+    "    - 0 (normal): current activity corresponds to normal behavior of any working day and. Therefore, no reconfiguration or redistribution of resources is needed.\n",
+    "    - 1 (unusual): current activity slightly differs from the behavior usually observed for that time of the day (e.g. due to a strike, demonstration, sports event, etc.), which should trigger a reconfiguration of the base station.\n",
+    "    \n",
+    "**Project Value**\n",
+    "- Target Benefits: Why are we doing this project and where is the value?\n",
+    "- Business Needs\n",
+    "    - Identifying all of the available benefits (not just ‘enough benefits’ to get the project approved)\n",
+    "    - Defining specific measurable end states—the desired business outcomes—that need to be achieved in the business for the benefits to be delivered in full (filling the ‘gap’)\n",
+    "    - Maximizing and then quantifying all of the available financial benefits\n",
+    "    - Identifying the change activities required to deliver these outcomes, benefits and value.\n",
+    "\n",
+    "**Data** <br>\n",
+    "https://www.kaggle.com/c/anomaly-detection-in-cellular-networks/data\n",
+    "\n",
+    "During two weeks, different metrics were gathered from a set of 10 base stations, each having a different number of cells, every 15 minutes\n",
+    "\n",
+    "The dataset is split into training (approx. 80%) and test (approx. 20%) subsets provided as two separate CSV files\n",
+    "- The training set: ML-MATT-CompetitionQT1920_train.csv contains 36,904 samples, each having 13 features and a label. Note that there may be erroneous samples and outliers.\n",
+    "- The test set: ML-MATT-CompetitionQT1920_test.csv contains 9,158 samples following the same structure as the training set but not including the labels.\n",
+    "\n",
+    "- Column Definitions\n",
+    "    - Time : hour of the day (in the format hh:mm) when the sample was generated.\n",
+    "    - CellName1: text string used to uniquely identify the cell that generated the current sample. CellName is in the form xαLTE, where x identifies the base station, and α the cell within that base station (see the example in the right figure).\n",
+    "    - PRBUsageUL and PRBUsageDL: level of resource utilization in that cell measured as the portion of Physical Radio Blocks (PRB) that were in use (%) in the previous 15 minutes. Uplink (UL) and downlink (DL) are measured separately.\n",
+    "    - meanThrDL and meanThrUL: average carried traffic (in Mbps) during the past 15 minutes. Uplink (UL) and downlink (DL) are measured separately.\n",
+    "    - maxThrDL and maxThrUL: maximum carried traffic (in Mbps) measured in the last 15 minutes. Uplink (UL) and downlink (DL) are measured separately.\n",
+    "    - meanUEDL and meanUEUL: average number of user equipment (UE) devices that were simultaneously active during the last 15 minutes. Uplink (UL) and downlink (DL) are measured separately.\n",
+    "    - maxUEDL and maxUEUL: maximum number of user equipment (UE) devices that were simultaneously active during the last 15 minutes. Uplink (UL) and downlink (DL) are measured separately.\n",
+    "    - maxUE_UL+DL: maximum number of user equipment (UE) devices that were active simultaneously in the last 15 minutes, regardless of UL and DL.\n",
+    "    - Unusual: labels for supervised learning. A value of 0 determines that the sample corresponds to normal operation, a value of 1 identifies unusual behavior.\n",
+    "\n",
     "\n",
     "**Algorithms to Implement**\n",
     "- One-Class Support Vector Machines\n",
@@ -29,12 +63,15 @@
     "- https://towardsdatascience.com/the-most-awesome-loss-function-172ffc106c99\n",
     "\n",
     "\n",
-    "**Resources - Exploratory Data Analysis** <br>\n",
-    "https://towardsdatascience.com/organize-your-data-and-models-using-the-object-oriented-programming-and-pickle-876a6654494 <br>\n",
-    "https://www.brighthubpm.com/project-planning/128738-are-your-projects-delivering-business-value/ <br>\n",
-    "https://machinelearningmastery.com/framework-for-data-preparation-for-machine-learning/ <br>\n",
-    "https://machinelearningmastery.com/sensitivity-analysis-of-dataset-size-vs-model-performance/ <br>\n",
+    "**Benchmark Perfomance**\n",
+    "- Top 10: 0.99244\n",
+    "- Top 20: 0.88193\n",
+    "- Worst: 0.41447\n",
     "\n",
+    "**Resources - Exploratory Data Analysis** <br>\n",
+    "~~https://towardsdatascience.com/organize-your-data-and-models-using-the-object-oriented-programming-and-pickle-876a6654494 ~~<br>\n",
+    "~~https://www.brighthubpm.com/project-planning/128738-are-your-projects-delivering-business-value/~~ <br>\n",
+    "~~https://machinelearningmastery.com/framework-for-data-preparation-for-machine-learning/~~ <br>\n",
     "\n",
     "**Resources - Anomaly Detection** <br>\n",
     "Andew Ng - Machine Learning Tutorials (YouTube) <br>\n",
@@ -47,7 +84,257 @@
     "https://medium.com/pinterest-engineering/building-a-real-time-anomaly-detection-system-for-time-series-at-pinterest-a833e6856ddd <br>\n",
     "https://www.bmc.com/blogs/outlier-and-anomaly-detection/ <br>\n",
     "https://machinelearningmastery.com/how-to-use-statistics-to-identify-outliers-in-data/ <br>\n",
-    "https://towardsdatascience.com/unsupervised-machine-learning-approaches-for-outlier-detection-in-time-series-using-python-5759c6394e19 <br>"
+    "https://towardsdatascience.com/unsupervised-machine-learning-approaches-for-outlier-detection-in-time-series-using-python-5759c6394e19 <br>\n",
+    "https://towardsdatascience.com/adrepository-anomaly-detection-datasets-with-real-anomalies-2ee218f76292 <br>\n",
+    "https://towardsdatascience.com/identifying-outliers-with-local-outlier-probabilities-2b5781e86e01#:~:text=By%20comparing%20the%20local%20density,to%20their%20Local%20Outlier%20Probability. <br>\n",
+    "https://medium.com/sciforce/anomaly-detection-another-challenge-for-artificial-intelligence-c69d414b14db <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv('/Users/Rej1992/Documents/GitHub/AnomalieDetectionMethods/data/ML-MATT-CompetitionQT1920_train.csv')\n",
+    "test_df = pd.read_csv('/Users/Rej1992/Documents/GitHub/AnomalieDetectionMethods/data/ML-MATT-CompetitionQT1920_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing\n",
+    "**Challenge of Data Preparation**\n",
+    "- Correct data mistakes or errors\n",
+    "- Align data to chosen algorithms expectations regarding the type and distribution of the data\n",
+    "\n",
+    "**Framework for Data Preparation**\n",
+    "- Data Preparation for Rows\n",
+    "    - Remove Duplicates\n",
+    "    - Remove Outliers (rows of data that may be far from the center of probability mass in the dataset)\n",
+    "    - Data Sampling Strategy\n",
+    "    - Treatment for inbalanced data \n",
+    "- Data Preparation for Columns\n",
+    "    - Cardinality / Zero Variance Predictors \n",
+    "    - Feature Selection\n",
+    "    - Polynominal / Dummy Features / Interactions Variables\n",
+    "    - Encoding Strategy\n",
+    "- Data Preparation for Values\n",
+    "    - Scaling (Normalisation / Standardisation / Discretization - Binning)\n",
+    "    - Power & Quantile Transforms (Change Distribution)\n",
+    "    - Missing Value Treatment and Imputation\n",
+    "- Rows and Values\n",
+    "    - Dimension Reduction\n",
+    "    - Dimension Increase \n",
+    "       - Create a projection into a higher-dimensional space, perhaps decompiling complex non-linear relationships\n",
+    "- Columns and Values\n",
+    "    - Row Consolidation\n",
+    "    - Clustering Algorithms to determine cohorts \n",
+    "    - \"Groupby\" statistics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>CellName</th>\n",
+       "      <th>PRBUsageUL</th>\n",
+       "      <th>PRBUsageDL</th>\n",
+       "      <th>meanThr_DL</th>\n",
+       "      <th>meanThr_UL</th>\n",
+       "      <th>maxThr_DL</th>\n",
+       "      <th>maxThr_UL</th>\n",
+       "      <th>meanUE_DL</th>\n",
+       "      <th>meanUE_UL</th>\n",
+       "      <th>maxUE_DL</th>\n",
+       "      <th>maxUE_UL</th>\n",
+       "      <th>maxUE_UL+DL</th>\n",
+       "      <th>Unusual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10:45</td>\n",
+       "      <td>3BLTE</td>\n",
+       "      <td>11.642</td>\n",
+       "      <td>1.393</td>\n",
+       "      <td>0.370</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>15.655</td>\n",
+       "      <td>0.644</td>\n",
+       "      <td>1.114</td>\n",
+       "      <td>1.025</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>09:45</td>\n",
+       "      <td>1BLTE</td>\n",
+       "      <td>21.791</td>\n",
+       "      <td>1.891</td>\n",
+       "      <td>0.537</td>\n",
+       "      <td>0.268</td>\n",
+       "      <td>10.273</td>\n",
+       "      <td>1.154</td>\n",
+       "      <td>1.353</td>\n",
+       "      <td>1.085</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>07:45</td>\n",
+       "      <td>9BLTE</td>\n",
+       "      <td>0.498</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.262</td>\n",
+       "      <td>0.164</td>\n",
+       "      <td>0.995</td>\n",
+       "      <td>0.995</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>02:45</td>\n",
+       "      <td>4ALTE</td>\n",
+       "      <td>1.891</td>\n",
+       "      <td>1.095</td>\n",
+       "      <td>0.940</td>\n",
+       "      <td>0.024</td>\n",
+       "      <td>60.715</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>1.035</td>\n",
+       "      <td>0.995</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>03:30</td>\n",
+       "      <td>10BLTE</td>\n",
+       "      <td>0.303</td>\n",
+       "      <td>0.404</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>0.348</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>1.011</td>\n",
+       "      <td>1.011</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Time CellName  PRBUsageUL  PRBUsageDL  meanThr_DL  meanThr_UL  maxThr_DL  \\\n",
+       "0  10:45    3BLTE      11.642       1.393       0.370       0.041     15.655   \n",
+       "1  09:45    1BLTE      21.791       1.891       0.537       0.268     10.273   \n",
+       "2  07:45    9BLTE       0.498       0.398       0.015       0.010      0.262   \n",
+       "3  02:45    4ALTE       1.891       1.095       0.940       0.024     60.715   \n",
+       "4  03:30   10BLTE       0.303       0.404       0.016       0.013      0.348   \n",
+       "\n",
+       "   maxThr_UL  meanUE_DL  meanUE_UL  maxUE_DL  maxUE_UL maxUE_UL+DL  Unusual  \n",
+       "0      0.644      1.114      1.025       4.0       3.0           7        1  \n",
+       "1      1.154      1.353      1.085       6.0       4.0          10        1  \n",
+       "2      0.164      0.995      0.995       1.0       1.0           2        1  \n",
+       "3      0.825      1.035      0.995       2.0       2.0           4        1  \n",
+       "4      0.168      1.011      1.011       2.0       1.0           3        0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis \n",
+    "https://machinelearningmastery.com/statistical-imputation-for-missing-values-in-machine-learning/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anomaly Detection Algorithm Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Results and Generate Final Results\n",
+    "https://towardsdatascience.com/organize-your-data-and-models-using-the-object-oriented-programming-and-pickle-876a6654494"
    ]
   },
   {
