Added resources and reviewed initial docs to establish project framework

--- a/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
+++ b/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anomaly/Outlier Detection"
+    "# Anomaly Detection"
    ]
   },
   {
@@ -30,6 +30,7 @@
     "\n",
     "**Data** <br>\n",
     "https://www.kaggle.com/c/anomaly-detection-in-cellular-networks/data\n",
+    "https://towardsdatascience.com/adrepository-anomaly-detection-datasets-with-real-anomalies-2ee218f76292\n",
     "\n",
     "During two weeks, different metrics were gathered from a set of 10 base stations, each having a different number of cells, every 15 minutes\n",
     "\n",
@@ -59,8 +60,8 @@
     "\n",
     "\n",
     "**Loss Functions to Consider**\n",
-    "- Log-Loss\n",
-    "- https://towardsdatascience.com/the-most-awesome-loss-function-172ffc106c99\n",
+    "- Accuracy\n",
+    "- Log-Loss (https://towardsdatascience.com/the-most-awesome-loss-function-172ffc106c99)\n",
     "\n",
     "\n",
     "**Benchmark Perfomance**\n",
@@ -71,28 +72,25 @@
     "**Resources - Exploratory Data Analysis** <br>\n",
     "~~https://towardsdatascience.com/organize-your-data-and-models-using-the-object-oriented-programming-and-pickle-876a6654494 ~~<br>\n",
     "~~https://www.brighthubpm.com/project-planning/128738-are-your-projects-delivering-business-value/~~ <br>\n",
-    "~~https://machinelearningmastery.com/framework-for-data-preparation-for-machine-learning/~~ <br>\n",
     "\n",
     "**Resources - Anomaly Detection** <br>\n",
     "Andew Ng - Machine Learning Tutorials (YouTube) <br>\n",
-    "https://machinelearningmastery.com/model-based-outlier-detection-and-removal-in-python/ <br>\n",
-    "https://medium.com/learningdatascience/anomaly-detection-techniques-in-python-50f650c75aaf <br>\n",
-    "https://towardsdatascience.com/detecting-credit-card-fraud-using-machine-learning-a3d83423d3b8 <br>\n",
-    "https://towardsdatascience.com/build-your-first-anomaly-detector-in-power-bi-using-pycaret-2b41b363244e <br>\n",
-    "https://towardsdatascience.com/detecting-weird-data-conformal-anomaly-detection-20afb36c7bcd <br>\n",
     "Multivariate Unsupervised Machine Learning for Anomaly Detection in Enterprise Applications.pdf <br>\n",
-    "https://medium.com/pinterest-engineering/building-a-real-time-anomaly-detection-system-for-time-series-at-pinterest-a833e6856ddd <br>\n",
-    "https://www.bmc.com/blogs/outlier-and-anomaly-detection/ <br>\n",
-    "https://machinelearningmastery.com/how-to-use-statistics-to-identify-outliers-in-data/ <br>\n",
-    "https://towardsdatascience.com/unsupervised-machine-learning-approaches-for-outlier-detection-in-time-series-using-python-5759c6394e19 <br>\n",
-    "https://towardsdatascience.com/adrepository-anomaly-detection-datasets-with-real-anomalies-2ee218f76292 <br>\n",
-    "https://towardsdatascience.com/identifying-outliers-with-local-outlier-probabilities-2b5781e86e01#:~:text=By%20comparing%20the%20local%20density,to%20their%20Local%20Outlier%20Probability. <br>\n",
-    "https://medium.com/sciforce/anomaly-detection-another-challenge-for-artificial-intelligence-c69d414b14db <br>"
+    "~~https://machinelearningmastery.com/model-based-outlier-detection-and-removal-in-python/~~ <br>\n",
+    "~~https://www.bmc.com/blogs/outlier-and-anomaly-detection/~~ <br>\n",
+    "~~https://medium.com/sciforce/anomaly-detection-another-challenge-for-artificial-intelligence-c69d414b14db~~ <br>\n",
+    "~~https://medium.com/learningdatascience/anomaly-detection-techniques-in-python-50f650c75aaf~~ <br>\n",
+    "~~https://towardsdatascience.com/detecting-weird-data-conformal-anomaly-detection-20afb36c7bcd~~ <br>\n",
+    "~~https://machinelearningmastery.com/how-to-use-statistics-to-identify-outliers-in-data/~~ <br>\n",
+    "~~https://towardsdatascience.com/detecting-credit-card-fraud-using-machine-learning-a3d83423d3b8~~ <br>\n",
+    "~~https://towardsdatascience.com/unsupervised-machine-learning-approaches-for-outlier-detection-in-time-series-using-python-5759c6394e19~~ <br>\n",
+    "~~https://medium.com/pinterest-engineering/building-a-real-time-anomaly-detection-system-for-time-series-at-pinterest-a833e6856ddd~~ <br>\n",
+    "~~https://towardsdatascience.com/identifying-outliers-with-local-outlier-probabilities-2b5781e86e01#:~:text=By%20comparing%20the%20local%20density,to%20their%20Local%20Outlier%20Probability.~~ <br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,51 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('/Users/Rej1992/Documents/GitHub/AnomalieDetectionMethods/data/ML-MATT-CompetitionQT1920_train.csv')\n",
-    "test_df = pd.read_csv('/Users/Rej1992/Documents/GitHub/AnomalieDetectionMethods/data/ML-MATT-CompetitionQT1920_test.csv')"
+    "train_df = pd.read_csv('/Users/Rej1992/Documents/AnomalieDetectionMethods_RawData/ML-MATT-CompetitionQT1920_train.csv')\n",
+    "test_df = pd.read_csv('/Users/Rej1992/Documents/AnomalieDetectionMethods_RawData/ML-MATT-CompetitionQT1920_test.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preprocessing\n",
-    "**Challenge of Data Preparation**\n",
-    "- Correct data mistakes or errors\n",
-    "- Align data to chosen algorithms expectations regarding the type and distribution of the data\n",
-    "\n",
-    "**Framework for Data Preparation**\n",
-    "- Data Preparation for Rows\n",
-    "    - Remove Duplicates\n",
-    "    - Remove Outliers (rows of data that may be far from the center of probability mass in the dataset)\n",
-    "    - Data Sampling Strategy\n",
-    "    - Treatment for inbalanced data \n",
-    "- Data Preparation for Columns\n",
-    "    - Cardinality / Zero Variance Predictors \n",
-    "    - Feature Selection\n",
-    "    - Polynominal / Dummy Features / Interactions Variables\n",
-    "    - Encoding Strategy\n",
-    "- Data Preparation for Values\n",
-    "    - Scaling (Normalisation / Standardisation / Discretization - Binning)\n",
-    "    - Power & Quantile Transforms (Change Distribution)\n",
-    "    - Missing Value Treatment and Imputation\n",
-    "- Rows and Values\n",
-    "    - Dimension Reduction\n",
-    "    - Dimension Increase \n",
-    "       - Create a projection into a higher-dimensional space, perhaps decompiling complex non-linear relationships\n",
-    "- Columns and Values\n",
-    "    - Row Consolidation\n",
-    "    - Clustering Algorithms to determine cohorts \n",
-    "    - \"Groupby\" statistics "
+    "## Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +262,7 @@
        "4      0.168      1.011      1.011       2.0       1.0           3        0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,6 +276,7 @@
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis \n",
+    "https://towardsdatascience.com/data-cleaning-with-python-and-pandas-detecting-missing-values-3e9c6ebcf78b <br>\n",
     "https://machinelearningmastery.com/statistical-imputation-for-missing-values-in-machine-learning/"
    ]
   },
@@ -319,7 +291,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Anomaly Detection Algorithm Application"
+    "## How to use Statistics to Identify Outliers\n",
+    "https://machinelearningmastery.com/how-to-use-statistics-to-identify-outliers-in-data/ <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anomaly Detection Algorithm Application\n",
+    "**One-Class Support Vector Machines** <br>\n",
+    "\n",
+    "**Isolation Forest** <br>\n",
+    "https://www.bmc.com/blogs/outlier-and-anomaly-detection/\n",
+    "\n",
+    "**Local Outlier Factor** <br>\n",
+    "\n",
+    "**Elliptic Envelope** <br>\n",
+    "\n",
+    "**DBSCAN** <br>\n",
+    "\n",
+    "**Multivariate anomalie detection** <br>\n",
+    "\n",
+    "**Conformal Anomaly Detection & Conformal Prediction Framework** <br>\n",
+    "https://towardsdatascience.com/detecting-weird-data-conformal-anomaly-detection-20afb36c7bcd\n",
+    "\n",
+    "**Other Resources** <br>\n",
+    "https://medium.com/learningdatascience/anomaly-detection-techniques-in-python-50f650c75aaf <br>\n",
+    "https://machinelearningmastery.com/model-based-outlier-detection-and-removal-in-python/ <br>\n",
+    "https://towardsdatascience.com/identifying-outliers-with-local-outlier-probabilities-2b5781e86e01#:~:text=By%20comparing%20the%20local%20density,to%20their%20Local%20Outlier%20Probability."
    ]
   },
   {
@@ -335,6 +342,23 @@
    "source": [
     "## Save Results and Generate Final Results\n",
     "https://towardsdatascience.com/organize-your-data-and-models-using-the-object-oriented-programming-and-pickle-876a6654494"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Usecases\n",
+    "https://towardsdatascience.com/detecting-credit-card-fraud-using-machine-learning-a3d83423d3b8 <br>\n",
+    "https://towardsdatascience.com/unsupervised-machine-learning-approaches-for-outlier-detection-in-time-series-using-python-5759c6394e19 <br>\n",
+    "https://medium.com/pinterest-engineering/building-a-real-time-anomaly-detection-system-for-time-series-at-pinterest-a833e6856ddd <br>"
    ]
   },
   {
