Added research resources and finalised project scope

--- a/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
+++ b/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
@@ -75,9 +75,10 @@
     "\n",
     "**Resources - Anomaly Detection** <br>\n",
     "Andew Ng - Machine Learning Tutorials (YouTube) <br>\n",
-    "Multivariate Unsupervised Machine Learning for Anomaly Detection in Enterprise Applications.pdf <br>\n",
+    "~~Multivariate Unsupervised Machine Learning for Anomaly Detection in Enterprise Applications.pdf~~ <br>\n",
     "~~https://machinelearningmastery.com/model-based-outlier-detection-and-removal-in-python/~~ <br>\n",
     "~~https://www.bmc.com/blogs/outlier-and-anomaly-detection/~~ <br>\n",
+    "~~https://machinelearningmastery.com/one-class-classification-algorithms/~~ <br>\n",
     "~~https://medium.com/sciforce/anomaly-detection-another-challenge-for-artificial-intelligence-c69d414b14db~~ <br>\n",
     "~~https://medium.com/learningdatascience/anomaly-detection-techniques-in-python-50f650c75aaf~~ <br>\n",
     "~~https://towardsdatascience.com/detecting-weird-data-conformal-anomaly-detection-20afb36c7bcd~~ <br>\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +273,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,6 +332,7 @@
     "https://towardsdatascience.com/detecting-weird-data-conformal-anomaly-detection-20afb36c7bcd\n",
     "\n",
     "**Other Resources** <br>\n",
+    "https://machinelearningmastery.com/one-class-classification-algorithms/ <br>\n",
     "https://medium.com/learningdatascience/anomaly-detection-techniques-in-python-50f650c75aaf <br>\n",
     "https://machinelearningmastery.com/model-based-outlier-detection-and-removal-in-python/ <br>\n",
     "https://towardsdatascience.com/identifying-outliers-with-local-outlier-probabilities-2b5781e86e01#:~:text=By%20comparing%20the%20local%20density,to%20their%20Local%20Outlier%20Probability."
